2004-02-28  Ronny Buchmann <ronny-vlug@vlugnet.org>

	* src/parser/db.c: don't stop reading values on space

2004-02-24  Christian Stimming <stimming@tuhh.de>

	* src/os/windows/libloader.c: Improve error message output.

	* src/os/windows/libloader.c: Append paths by backslash -- this is
	windows.

===========================================================================
MARK: released gwenhywfar-0.9.7 (2004/02/18)
===========================================================================

2004-02-17  Christian Stimming <stimming@tuhh.de>

	* src/parser/xml_p.h (GWEN_XML_MAX_VARNAMELEN): Increased static
	buffer sizes a *lot* since they already exceeded for perfectly
	valid XML documents.

===========================================================================
MARK: released gwenhywfar-0.9.6 (2004/02/15)
===========================================================================

2004-02-13  Christian Stimming <stimming@tuhh.de>

	* src/parser/xml.h: Improved documentation: Clarified the
	comparison to XML notation/naming scheme, which is different from
	Gwen's notation.

2004-02-04  Christian Stimming <stimming@tuhh.de>

	* src/os/windows/libloader.c, src/os/posix/libloader.c: Fix
	errornous query for .so/.dll suffix.

2004/02/02: Ronny Buchmann <ronny-hbci@vlugnet.org>
---------------------------------------------------
- Makefile.cvs: make /usr/local in local: a variable

2004-01-28  Christian Stimming <stimming@tuhh.de>

	* test/gwentest.c, configure.ac: Add define to remove dependency
	on openssl in test program (for --disable-ssl).
	
	* Makefile.am: Add target "make quick" that generates the
	auto-generated headers first. This saves duplicated compilation.

	* m4/acx_windows_paths.m4: Renamed windoze.m4 to this file. Added
	caching of the directory values because this saves a lot of time.
	
	* README.W32: Add explanation of helpful configure options.

	* src/Makefile.am: Add LDFLAGS to DLLFLAGS since this is needed on
	some windows configurations.
